--- a/src/main/resources/403Page.html
+++ b/src/main/resources/403Page.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<!-- Include menu.html -->
+<!-- Include _menu.html -->
 <th:block th:include="/_menu"></th:block>
 
 <h3 th:if="${message != null}" th:utext="${message}" style="color: red;"></h3>
