--- a/src/main/resources/userInfoPage.html
+++ b/src/main/resources/userInfoPage.html
@@ -4,7 +4,7 @@
     <title>User Info</title>
 </head>
 <body>
-<!-- Include menu.html -->
+<!-- Include _menu.html -->
 <!--<th:block th:include="/_menu"></th:block>-->
 
 
