--- a/src/main/resources/welcomePage.html
+++ b/src/main/resources/welcomePage.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<!-- Include menu.html -->
+<!-- Include _menu.html -->
 <th:block th:include="/_menu"></th:block>
 
 <h2>Message : <span th:utext="${message}"></span></h2>
