--- a/src/main/resources/loginPage.html
+++ b/src/main/resources/loginPage.html
@@ -4,8 +4,8 @@
     <title>Login</title>
 </head>
 <body>
-<!-- Include menu.html -->
-<!--<th:block th:include="/menu"></th:block>-->
+<!-- Include _menu.html -->
+<!--<th:block th:include="/_menu"></th:block>-->
 
 <h1>Login</h1>
 
