--- a/src/main/resources/logoutSuccessfulPage.html
+++ b/src/main/resources/logoutSuccessfulPage.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<!-- Include menu.html -->
+<!-- Include _menu.html -->
 <th:block th:include="/_menu"></th:block>
 
 <h1>Logout Successful!</h1>
